# dice-roller-bot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
bot/: bot.py
bot/cog/: characters.py  dev.py  dice_rolling.py  help.py
bot/utils/: dice_parser.py
config/: config.py
