[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dice-roller-bot"
version = "0.1.0"
description = "A Discord bot for rolling dice"
readme = "Readme.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
dice-roller-bot = "dice_roller_bot.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dice_roller_bot*"]